first working state

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,16 +7,12 @@
 
     %link{ :rel => 'stylesheet', :href => 'stylesheets/lib/bootstrap.min.css' }
     %link{ :rel => 'stylesheet', :href => 'stylesheets/lib/bootstrap-responsive.min.css' }
+    %link{ :rel => 'stylesheet', :href => 'stylesheets/sciime.css' }
 
   %body
-    .hero-unit
-      %h1#widget-title
-        Sciime
 
-      %p#widget-subtitle
-
-
-    %div#widget-content
+    %div#widget-content.carousel.slide
+      %div.carousel-inner
 
     %script{ :src => 'https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js' }
     %script{ :src => 'javascripts/lib/bootstrap.min.js' }
