refactoring and add navigation

--- a/views/index.haml
+++ b/views/index.haml
@@ -11,6 +11,10 @@
 
   %body
 
+    %div.navbar
+      %div.navbar-inner
+        %div.container
+          %ul#widget-navigation.nav
     %div#widget-content.carousel.slide
       %div.carousel-inner
 
