--- a/views/index.haml
+++ b/views/index.haml
@@ -3,18 +3,18 @@
 %html
   %head
     %title
-      Dashboard
+      Sciime
 
     %link{ :rel => 'stylesheet', :href => 'stylesheets/lib/bootstrap.min.css' }
     %link{ :rel => 'stylesheet', :href => 'stylesheets/lib/bootstrap-responsive.min.css' }
     %link{ :rel => 'stylesheet', :href => 'stylesheets/sciime.css' }
 
   %body
-
     %div.navbar
       %div.navbar-inner
         %div.container
           %ul#widget-navigation.nav
+
     %div#widget-content.carousel.slide
       %div.carousel-inner
 
