--- a/views/index.haml
+++ b/views/index.haml
@@ -14,6 +14,9 @@
       %div.navbar-inner
         %div.container
           %ul#widget-navigation.nav
+            %li.play-pause
+              %i.s-icon-play
+              %i.s-icon-pause
 
     %div#widget-content.carousel.slide
       %div.carousel-inner
