--- a/public/stylesheets/sciime.css
+++ b/public/stylesheets/sciime.css
@@ -1,4 +1,29 @@
+* {
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  box-sizing:border-box;
+}
+
+html, body, .carousel, .carousel-inner {
+  height:100%;
+}
+
+#widget-content {
+  padding-top:39px;
+}
+.carousel-inner {
+  overflow:hidden;
+}
+
 /* Navigation */
+.navbar {
+  margin-bottom:0;
+  position:absolute;
+  top:0;
+  width:100%;
+  z-index:1000;
+}
+
 #widget-navigation i {
   cursor:pointer;
   margin-top:12px;
@@ -8,8 +33,36 @@
   display:inline-block;
 }
 
-#widget-content .item > div:not(.hero-unit) {
-  padding:0 60px;
+/* General widget styles */
+.item {
+  height:100%;
+}
+
+.item .hero-unit {
+  height:12%;
+  margin:0;
+  padding:15px;
+}
+
+.item > div:last-child {
+  height:100%;
+  padding:0 15px;
+}
+
+.item > div:last-child.four {
+  padding:0;
+}
+
+.item > div:last-child.four > div {
+  border-radius:6px;
+  box-shadow:0px 0px 7px #999;
+  float:left;
+  height:42%;
+  margin-left:1%;
+  margin-top:1%;
+  overflow:hidden;
+  padding:15px;
+  width:48.5%;
 }
 
 /* Icons */
