--- a/public/stylesheets/sciime.css
+++ b/public/stylesheets/sciime.css
@@ -53,11 +53,23 @@ html, body, .carousel, .carousel-inner {
   padding:0;
 }
 
+.item > div:last-child.two > div {
+  border-radius:6px;
+  box-shadow:0px 0px 7px #999;
+  float:left;
+  height:83%;
+  margin-left:1%;
+  margin-top:1%;
+  overflow:hidden;
+  padding:15px;
+  width:48.5%;
+}
+
 .item > div:last-child.four > div {
   border-radius:6px;
   box-shadow:0px 0px 7px #999;
   float:left;
-  height:42%;
+  height:41.5%;
   margin-left:1%;
   margin-top:1%;
   overflow:hidden;
